# backtests

./: .env.example  .gitignore  debug_garbage2.py  debug_trade.py  generate_baseline_charts.py  generate_dashboard.py  generate_entry_charts.py  pyproject.toml  qa_chart.py  run_nq_sweep.py  smoke_test.py  test_require_test.py  test_session_ends.py  test_simple_full_sweep.py  test_simple_strategy.py  test_trailing_sweep.py
docs/: filter_tests_nq.md  findings_nq.md  stats_14day_ror.md  stats_doomsday_budget.md  stats_mae_mfe.md  stats_risk_per_trade.md
results/: dashboard.md  entries.html
src/ib_backtest/: __init__.py  data.py  engine.py  ib.py  live.py  monte_carlo.py  scanner.py  stats.py
tests/: test_ib.py
