[project]
name = "ib-backtest"
version = "0.1.0"
description = "Initial Balance by Rejection backtester with MAE/MFE tracking and parameter sweep"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ib_backtest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
